# simple-rust-ecs

./: Cargo.toml
src/: main copy 2.rs  main copy.rs  main.rs
