[package]
name = "test-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sparseset = "1.0.1"
once_cell = "1.15.0"
uuid = { version = "1.1.2", features = ["v4"] }
dashmap = "5.4.0"
rustc-hash = "1.1.0"

[profile.release]
lto = true
opt-level = 3

[profile.dev]
lto = true
opt-level = 3
